--- a/extension/popup.html
+++ b/extension/popup.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" type="text/css" href="css/font-awesome.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
-    <script src="js/jquery.js"></script>
-    <script src="js/bootstrap.js"></script>
-    <script src="js/handlebars.runtime.js"></script>
+    <script src="js/lib/jquery.js"></script>
+    <script src="js/lib/bootstrap.js"></script>
+    <script src="js/lib/handlebars.runtime.js"></script>
     <script src="js/template.js"></script>
 </head>
 <body>
@@ -31,7 +31,7 @@
 
     </div>
 
-    <script src="js/main.js"></script>
+    <script src="js/front.js"></script>
 
 </body>
 </html>
