add notification system

--- a/extension/background.html
+++ b/extension/background.html
@@ -1,3 +1,4 @@
 <script src="js/lib/jquery.js"></script>
 <script src="js/jenkins.js"></script>
+<script src="js/notification.js"></script>
 <script src="js/background.js"></script>
