improve notification messages

--- a/extension/background.html
+++ b/extension/background.html
@@ -1,4 +1,5 @@
 <script src="js/lib/jquery.js"></script>
+<script src="js/constants.js"></script>
 <script src="js/jenkins.js"></script>
 <script src="js/notification.js"></script>
 <script src="js/background.js"></script>
