--- a/extension/options.html
+++ b/extension/options.html
@@ -17,14 +17,13 @@
     <fieldset>
       <legend>Options</legend>
       <div class="control-group jenkins-url">
-        <label class="control-label" for="jenkins-url">Jenkins Url:
-          <a id="add-jenkins" class="btn btn-small btn-success" href="">
-            <i class="icon-plus"></i>
-          </a>
-        </label>
+        <label class="control-label" for="jenkins-url">Jenkins Url: </label>
         <div class="controls">
           <input type="text" name="jenkins-url" placeholder="Input Jenkins URL here">
           <span class="save-info"></span>
+          <a class="btn btn-small btn-success add-jenkins" href="">
+            <i class="icon-plus"></i>
+          </a>
         </div>
       </div>
       <div class="control-group">
